Restructured server js code

--- a/views/allPosts.ejs
+++ b/views/allPosts.ejs
@@ -10,6 +10,7 @@
                         category : <%= post.categories %>
                         author : <%= post.yoast_head_json.author %>
                         media : <%= post.featured_media %>
+                        Geschatte leestijd : <%= post["Geschatte leestijd"] %>
                     </p>
                     <img src="<%= post.jetpack_featured_media_url %>" class="article-img">
                     <p>
