Restructure workplace seperate css files

--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -1,5 +1,9 @@
 <%- include('./partials/head') %>
 
+<link rel="stylesheet" href="/styles/categories.css">
+
+<%- include('./partials/navbar') %>
+
 <main>
     <ul>
         <% categories.forEach(category=> { %>
