--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,13 @@
 <%- include('./partials/head') %>
 
+<link rel="stylesheet" href="/styles/home.css">
+
+</head>
+
+<body>
+
+<%- include('./partials/navbar') %>
+
 <!-- Trending and latest articles -->
 
     <main>
