--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,5 +1,13 @@
 <%- include('./partials/head') %>
 
+<link rel="stylesheet" href="/styles/detail.css">
+
+</head>
+
+<body>
+
+<%- include('./partials/navbar') %>
+
  <!-- One post to read -->
 <section>
     <h2><%= post[0].title.rendered %></h2>
