--- a/views/post.ejs
+++ b/views/post.ejs
@@ -9,7 +9,8 @@
 <%- include('./partials/navbar') %>
 
  <!-- One post to read -->
-<section>
+
+<section class="post">
     <h2><%= post[0].title.rendered %></h2>
         <ul>
             <li><%= post[0].yoast_head_json.author %></li>
