--- a/public/styles/detail.css
+++ b/public/styles/detail.css
@@ -2,3 +2,14 @@
     margin: 0;
     padding: 0;
 }
+
+section {
+    margin: 3.5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.detail-img {
+    width: 80%;
+}
