--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -2,7 +2,9 @@
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
+    box-sizing: border-box;
 }
+
 :root {
     --main-bg-color: ##F7F7F5;
     --text-color: #000000;
@@ -11,6 +13,15 @@
 body {
     background-color: var(--main-bg-color);
     color: var(--text-color);
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+main {
+    margin-top: 10%;
 }
 
 /* Nav styling */
@@ -25,3 +36,8 @@ nav {
     width: 40%;
 }
 
+@media (min-width: 45em) {
+    .logo {
+        width: 20%;
+    }
+}
