--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -7,7 +7,7 @@ article {
 
 .article-img {
     width: 100%;
-    height: 12.5em;
+    height: 14em;
     object-fit: cover;
     /* Maintain aspect ratio and crop if necessary */
 }
@@ -22,6 +22,7 @@ article {
     justify-content: space-between;
 }
 
+/* #region Responsiveness styling */
 @media (min-width: 31.25em) {
 
     main {
@@ -39,7 +40,7 @@ article {
     }
 
     .article-img {
-        height: 9em;
+        height: 10em;
         /* Fixed height for image */
     }
 
@@ -128,3 +129,5 @@ article {
 
 
 }
+
+/* #endregion */
