--- a/views/post.ejs
+++ b/views/post.ejs
@@ -12,7 +12,7 @@
             <main>
                 <section class="post">
                     <h2>
-                        <%= post[0].title.rendered %>
+                        <%- post[0].title.rendered %>
                     </h2>
                     <section class="post-info">
                     <ul>
@@ -36,4 +36,4 @@
                 </section>
             </main>
 
-            <%- include('./partials/foot') %>
+<%- include('./partials/foot') %>
