--- a/public/styles/detail.css
+++ b/public/styles/detail.css
@@ -6,7 +6,6 @@
 main {
     display: flex;
     flex-direction: column;
-
     align-items: center;
     margin: 5%;
     margin-top: calc(-7.5%);
@@ -35,12 +34,20 @@ ul {
     list-style: none;
     display: flex;
     /* justify-content: space-between; */
-    margin: 0% 3% 0% 3%;
+    margin: 4% 3% 4% 3%;
     justify-content: center;
+    /* padding: 0;
+    flex-wrap: wrap; */
 }
 
 .post-info {
-    margin: 4% 0% 4% 0%;
+    padding: 0;
+}
+
+.post-info li {
+    display: block;
+    margin-bottom: 10px;
+    /* Add vertical spacing for smaller screens */
 }
 
 li {
