--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,24 +11,24 @@
             <!-- Trending and latest articles -->
 
             <main>
-                    <% posts.forEach(post=> { %>
-                        <article class="">
-                                <a href="/post/<%= post.slug %>">
-                                    <img src="<%= post.jetpack_featured_media_url %>" class="article-img">
-                                    <h2 class="article-title">
-                                        <%= post.title.rendered %>
-                                    </h2>
-                                    <section class="article-info">
-                                        <p class="author">
-                                            <%= post.yoast_head_json.author %>
-                                        </p>
-                                        <p class="read-time">
-                                            <%= post.yoast_head_json.twitter_misc["Geschatte leestijd"] %>
-                                        </p>
-                                    </section>
-                                </a>
-                        </article>
-                        <% }); %>
+                <% posts.forEach(post=> { %>
+                    <article class="">
+                        <a href="/post/<%= post.slug %>">
+                            <img src="<%= post.jetpack_featured_media_url %>" class="article-img">
+                            <h2 class="article-title">
+                                <%- post.title.rendered %>
+                            </h2>
+                            <section class="article-info">
+                                <p class="author">
+                                    <%= post.yoast_head_json.author %>
+                                </p>
+                                <p class="read-time">
+                                    <%= post.yoast_head_json.twitter_misc["Geschatte leestijd"] %>
+                                </p>
+                            </section>
+                        </a>
+                    </article>
+                    <% }); %>
             </main>
 
             <%- include('./partials/foot') %>
