--- a/public/styles/detail.css
+++ b/public/styles/detail.css
@@ -50,6 +50,15 @@ ul {
     /* Add vertical spacing for smaller screens */
 }
 
+img {
+    width: 100%;
+    object-fit: cover;
+    /* margin: 5% 0% 5% 0%; */
+}
+
+.article-content {
+}
+
 li {
     font-size: 1em;
     margin: 2%;
