--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -5,6 +5,15 @@ article {
     border: 1.5px solid black;
 }
 
+article {
+    margin: 3.5%;
+    border: 1.5px solid black;
+}
+
+article:nth-child(1) {
+    border: 1.5px solid rgb(228, 8, 8);
+}
+
 .article-img {
     width: 100%;
     height: 14em;
@@ -20,6 +29,10 @@ article {
     margin: 5% 4% 5% 4%;
     display: flex;
     justify-content: space-between;
+}
+
+.author {
+    font-weight: 800;
 }
 
 /* #region Responsiveness styling */
@@ -107,7 +120,7 @@ article {
 
 
     main {
-        margin-top: 6%;
+        margin-top: 3%;
     }
 
     article {
