More styling fixes
dsws

--- a/views/post.ejs
+++ b/views/post.ejs
@@ -15,7 +15,7 @@
                         <%- post[0].title.rendered %>
                     </h2>
                     <section class="post-info">
-                        <ul>
+                        <ul class="info-list">
                             <li class="author">
                                 <%= post[0].yoast_head_json.author %>
                             </li>
