--- a/public/styles/detail.css
+++ b/public/styles/detail.css
@@ -3,6 +3,7 @@
     padding: 0;
 }
 
+
 main {
     display: flex;
     flex-direction: column;
@@ -11,52 +12,14 @@ main {
     margin-top: calc(-7.5%);
 }
 
-.post {
-    margin: 10%;
-    width: 100%;
-}
-
-
 h2 {
     font-size: 2em;
     text-align: center;
     margin: 5%;
 }
 
-.post-img {
-    height: 13em;
-    width: 100%;
-    border-radius: .25em;
-    object-fit: cover;
-}
-
 ul {
     list-style: none;
-    display: flex;
-    /* justify-content: space-between; */
-    margin: 4% 3% 4% 3%;
-    justify-content: center;
-    /* padding: 0;
-    flex-wrap: wrap; */
-}
-
-.post-info {
-    padding: 0;
-}
-
-.post-info li {
-    display: block;
-    margin-bottom: 10px;
-    /* Add vertical spacing for smaller screens */
-}
-
-img {
-    width: 100%;
-    object-fit: cover;
-    /* margin: 5% 0% 5% 0%; */
-}
-
-.article-content {
 }
 
 li {
@@ -74,8 +37,66 @@ li {
 }
 
 p {
-    margin-top: 5%;
+    margin-top: 4%;
 }
+
+/* #region Post styling */ 
+
+.post {
+    margin: 10%;
+    width: 100%;
+}
+
+.post-img {
+    height: 13em;
+    width: 100%;
+    border-radius: .25em;
+    object-fit: cover;
+}
+
+.info-list {
+    list-style: none;
+    display: flex;
+    margin: 4% 3% 4% 3%;
+    justify-content: center;
+}
+
+
+.post-info {
+    padding: 0;
+}
+
+.post-info li {
+    display: block;
+    margin-bottom: 10px;
+    /* Add vertical spacing for smaller screens */
+}
+
+img {
+    width: 100%;
+    object-fit: cover;
+    /* margin: 5% 0% 5% 0%; */
+}
+
+.article-content {}
+
+/* #region Post styling */ 
+
+
+/* #region Wordpress elements styling */
+
+.wp-block-heading {
+    margin-top: 5%;
+    font-size: 1.5em;
+}
+
+img:nth-child(1) {
+    margin: 5% 0% 5% 0%; /* images  */
+}
+
+/* #endregion */
+
+/* #region Media Queriess */
 
 @media (min-width: 28em) {
 
@@ -83,6 +104,7 @@ p {
         height: calc(13em + 4em);
     }
 }
+
 
 @media (min-width: 34em) {
 
@@ -166,3 +188,5 @@ p {
 
 
 }
+
+/* #endregion */
